# mediakit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.txt  README.md  mise.toml
.github/: dependabot.yml
.github/actions/init/: action.yml
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/scripts/: package-version.sh
.github/workflows/: publish.yml  pull_request.yml  push.yml
.research/: 2016_hd.txt  2016_sd.txt  2020_uhd.txt  2020_web.txt  2022_uhd_addenum.txt  guessit_episode_heuristics.md  scene_formats.md
benches/: filename_inspector.rs
demo/: .prettierrc.yml  index.css  index.html  main.tsx  package.json  tsconfig.json
demo/src/: App.tsx
demo/src/hooks/: useLocalStorage.ts
demo/wasm/: Cargo.toml
demo/wasm/src/: lib.rs  token_excerpt.rs
examples/: detect-tracks.rs  inspect-file.rs  inspect-path.rs  probe-media.rs
src/: lib.rs  macros.rs
src/inspect/: filename_metadata.rs  inspector.rs  mod.rs  token.rs  token_identity.rs  utils.rs
src/inspect/inspectors/: mod.rs
src/meta/: mod.rs  tag.rs
src/meta/fields/: air_date.rs  air_date.test.rs  audio_codec.rs  audio_codec.test.rs  audio_layout.rs  audio_layout.test.rs  audio_profile.rs  country.rs  language.rs  language.test.rs  language_tag.rs  language_tag.test.rs  media_format.rs  media_format.test.rs  media_type.rs  mod.rs  release_source.rs  subtitle_codec.rs  subtitle_codec.test.rs  subtitle_disposition.rs  track.rs  video_codec.rs  video_dynamic_range.rs  video_profile.rs  video_resolution.rs
src/meta/streams/: audio_stream.rs  mod.rs  mod.test.rs  stream_info.rs  subtitle_stream.rs  video_stream.rs
src/probe/: detected_container.rs  error.rs  input.rs  media_info.rs  media_info.test.rs  mod.rs  mod.test.rs  probe_result.rs  probe_result.test.rs
src/regexp/: mod.rs  regex_match.rs  regex_var.rs
src/utils/: date.rs  date.test.rs  mod.rs
tests/: filename_inspection_api.rs  filename_metadata_api.rs  language_detection_api.rs  meta_api.rs  probe_api.rs
(+102 files in other folders)
